--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,22 @@
 title:        API
 url:          http://kin-lane.github.io/api/
+
 version:      1.1.1
+
+logo:         https://s3.amazonaws.com/kinlane-productions/api-evangelist/developer-kin-lane-logo.png
+logo_width:   65
+logo_bottom_padding: 10
+
 author:
   name:       'Kin Lane'
   email:      'info@apievangelist.com'
-markdown:     rdiscount
-permalink:    pretty
-pygments:     true
+markdown:     kramdown
 
-permalink: /:categories/:year/:month/:day/:title
+permalink: /:categories/:year/:month/:day/:title/
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 paginate: 50
-paginate_path: "/news/page:num"
+paginate_path: "/blog/page:num/"
 
 categories_path : /categories.html
 tags_path : /tags.html
