--- a/_data/apis.yaml
+++ b/_data/apis.yaml
@@ -49,7 +49,7 @@
   - type: x-twitter
     url: https://twitter.com/kinlane
   - type: x-api-plan
-    url: _data/api-commons/kin-lane-api-api-plan.json
+    url: _data/api-commons/kin-lane-api-api-plan.yaml
   include:
   - name: Parent
     url: http://kin-lane.github.io/api//apis.yaml
