--- a/_data/api-commons/api-support.yaml
+++ b/_data/api-commons/api-support.yaml
@@ -3,15 +3,15 @@
   header: Provide details about how to get support. Make sure and have several options, including direct support as well as indirect, 24/7, self-service support that users can take advantage of.
   footer: Make sure and provide any additional information about what sort of time frame they can expect, and a general tone of how support is handled. Try to make things as friendly as possible, and developers will be more likey to connect. Hopefully you don't have any problems, but if you do, don't hestiate to ping us.
   resources:
-    - title: https://github.com/Kin-Lane/master/issues
+    - title: via Github
       description:
       image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github.png
-      url: Github Issues
-    - title: Twitter
+      url: https://github.com/Kin-Lane/master/issues
+    - title: via Twitter
       description:
       image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png
       url: https://twitter.com/kinlane/
-    - title: Email
+    - title: vaia Email
       description:
       image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-email-at.png
       url: mailto:info@kinlane.com
