Updating _data/apis.yaml via Laneworks CMS Publish

--- a/_data/apis.yaml
+++ b/_data/apis.yaml
@@ -44,7 +44,7 @@
   - type: x-documentation
     url: documentation/
   - type: x-faq
-    url: faq/
+    url: frequently-asked-questions/
   - type: x-getting-started
     url: getting-started/
   - type: x-github
