--- a/_data/api-commons/api-getting-started.yaml
+++ b/_data/api-commons/api-getting-started.yaml
@@ -1,4 +1,4 @@
-- title: Getting Started Using The API API
+- title: Getting Started
   image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-running.png
   header: I work hard to try and keep my APIs as easy to onboard, and get to work making requests in as few clicks as possible. Here are a few steps you should be considering as you are getting started using this API.
   footer: Please get to know me if you are going to be using my APIs. While they are publicly available, they are my personal resources. Make sure you sign up for just one account, fill out your profile, and if you need more access, or have problems, please reach out.
