--- a/_data/api-commons/api-support.yaml
+++ b/_data/api-commons/api-support.yaml
@@ -1,4 +1,4 @@
-- title: API Portal Support
+- title: Support
   image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-support.png
   header: I support a handful of ways you can get support across my network of APIs, and research projects. I prefer to keep all information associated with each projects Github repository, but also try and make myself as available as possible via other channels.
   footer: Please remember I am a one person show, and while I work to achieve the highest levels of available, there are times I go heads down on work, and tune out general email & social chatter. Usually if you submit via Github, with the right title, it will grab my attention, if its critical.
