--- a/_data/api-commons/api-road-map.yaml
+++ b/_data/api-commons/api-road-map.yaml
@@ -1,4 +1,4 @@
-- title: API Road Map
+- title: Road Map
   image: https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-roadmap.png
   header: I try to make sure I share what I am planning for each API self contained within each project repository. I use the Github issues management for organizing my road map, issues, and change log. This is just a static cache of the Github issues for this project.
   footer: I run a job daily that updates this cached list from the Github repository. Any Github issue that I close, and tag as "road map" will show up here on this list, for storage, and then syndication elsewhere.
