--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,11 @@ paginate_path: "/blog/page:num/"
 categories_path : /categories.html
 tags_path : /tags.html
 
+get_color: 000;
+post_color: 000;
+put_color: 000;
+delete_color: 000;
+
 org: kin-lane
 repo: api
 resource: api
